--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       <div class="titleBanner">
         <p class="titleText" >Projects</p>
 
-        <div class="rightProjectContainer" >
+        <div class="projectContainer" >
           <p class="projectTitle">Project Title</p>
           <p class="projectDate">15/04/2022</p>
           <p class="projectDesc">
