add projects and adjust widths

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
     <div class="bodyContent">
       <div class="titleBanner">
         <p class="titleText" >Projects</p>
+      </div>
         <div class="projectContainer" >
           <p class="projectTitle">Project Title</p>
           <p class="projectDate">15/04/2022</p>
@@ -32,7 +33,31 @@
             This is where the project description will go.
 
             This is where the project description will go.
-            
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
             This is where the project description will go.
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
@@ -47,7 +72,7 @@
           Designed by a human / Created by a human
           <a href="https://github.com" class="bodyGithubLink" ><br />View this website on GitHub</a>
         </p>
-      </div>
+
     </div>
     <div class="footer" >
       <div class="socials" >
