make project containers responsive

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
       <div class="titleBanner">
         <p class="titleText" >Projects</p>
       </div>
+      <div id="projectsPanel">
         <div class="projectContainer" >
           <p class="projectTitle">Project Title</p>
           <p class="projectDate">15/04/2022</p>
@@ -62,7 +63,115 @@
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
 
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+        <div class="projectContainer" >
+          <p class="projectTitle">Project Title</p>
+          <p class="projectDate">15/04/2022</p>
+          <p class="projectDesc">
+            This is where the project description will go.
+
+            This is where the project description will go.
+
+            This is where the project description will go.
+          </p>
+          <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
+        </div>
+      </div>
         <hr />
         <p class="subFooter">
           Last Updated:
