--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <script src="scripts/master.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+    window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    }
     </script>
   </head>
   <body onload="onLoadFunctions()">
