--- a/photography.html
+++ b/photography.html
@@ -12,6 +12,9 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         AOS.init();
+        window.onbeforeunload = function () {
+          window.scrollTo(0, 0);
+        }
       });
     </script>
   </head>
