fix link to contact page

--- a/about.html
+++ b/about.html
@@ -23,12 +23,13 @@
         <a href="about.html">About</a>
         <a href="photography.html">Photography</a>
         <a href="projects.html">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
 
     <div class="bodyContent">
       <div class="titleBanner">
+      </div>
         <p class="titleText" >About Me</p>
         <p id="aboutContent" >
           I'm Nikolai Patrick. I am a secondary student located in South Australia. I am interested in many things such as programming, web design, electronics engineering, photgraphy, geocaching, and more.
@@ -64,7 +65,6 @@
           Designed by a human / Created by a human
           <a href="https://github.com" class="bodyGithubLink" ><br />View this website on GitHub</a>
         </p>
-      </div>
     </div>
     <div class="footer" >
       <div class="socials" >
