--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="about.html">About</a>
         <a href="photography.html">Photography</a>
         <a href="projects.html">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
     <div id="title_block">
