--- a/photography.html
+++ b/photography.html
@@ -26,7 +26,7 @@
         <a href="about.html">About</a>
         <a href="photography.html">Photography</a>
         <a href="projects.html">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
 
