add contact info

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,25 @@
       <div class="titleBanner">
       </div>
         <p class="titleText" >Contact</p>
+        <p class="contactHeading">Main Contacts</p>
+        <ul>
+          <li>Email: <a class="profileName" href="#">nikolaipatricknp@gmail.com</a></li>
+          <li>Phone: <a class="profileName" href="#">123456789</a></li>
+        </ul>
+        <p class="contactHeading">Socials</p>
+        <ul>
+          <li>instagram: <a class="profileName" href="#">@npatrick_photos</a></li>
+          <li>YouTube: <a class="profileName" href="#">Nikolai Patrick</a></li>
+          <li>Discord <a class="profileName" href="#">Artichoke#4180</a></li>
 
-
-
+        </ul>
+        <p class="contactHeading">Other Profiles</p>
+        <ul>
+          <li>GitHub: <a class="profileName" href="#">Smartich0ke</a></li>
+          <li>Reedit <a class="profileName" href="#">Smartich0ke</a></li>
+          <li>Geocaching: <a class="profileName" href="#">Smartich0ke</a></li>
+          <li>Stack: <a class="profileName" href="#">HotGlue</a></li>
+        </ul>
         <hr />
         <p class="subFooter">
           Last Updated:
