add more images

--- a/photography.html
+++ b/photography.html
@@ -39,129 +39,129 @@
       <div class="responsive" data-aos="zoom-in-up">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
+            <img src="img/DSC_2312.JPG" alt="bird and water" width="600" height="400">
           </a>
-          <div class="desc">image caption goes here</div>
+          <div class="desc">Meningie, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2297.JPG">
+            <img src="img/DSC_2297.JPG" alt="houses facing river" width="600" height="400">
+          </a>
+          <div class="desc">Port Noarlunga, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_1710.JPG">
+            <img src="img/DSC_1710.JPG" alt="mushroom" width="600" height="400">
+          </a>
+          <div class="desc">Myponga Resovior, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_1688.JPG">
+            <img src="img/DSC_1688.JPG" alt="trees" width="600" height="400">
+          </a>
+          <div class="desc">Myponga Resovior, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2371.JPG">
+            <img src="img/DSC_2371.JPG" alt="stick insect" width="600" height="400">
+          </a>
+          <div class="desc">Coorong, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_1235.JPG">
+            <img src="img/DSC_1235.JPG" alt="river" width="600" height="400">
+          </a>
+          <div class="desc">Old Noarlunga, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2377.JPG">
+            <img src="img/DSC_2377.JPG" alt="purple flower" width="600" height="400">
+          </a>
+          <div class="desc">Coorong, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2330.JPG">
+            <img src="img/DSC_2330.JPG" alt="lake and jetty" width="600" height="400">
+          </a>
+          <div class="desc">Meningie, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2343.JPG">
+            <img src="img/DSC_2343.JPG" alt="flowers" width="600" height="400">
+          </a>
+          <div class="desc">Coorong, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_1755.JPG">
+            <img src="img/DSC_1755.JPG" alt="fountain" width="600" height="400">
+          </a>
+          <div class="desc">State Library, Adelaide CBD</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2366.JPG">
+            <img src="img/DSC_2366.JPG" alt="flower" width="600" height="400">
+          </a>
+          <div class="desc">Onkaparinga Nat. Park, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2389.JPG">
+            <img src="img/DSC_2389.JPG" alt="dry lake" width="600" height="400">
+          </a>
+          <div class="desc">Salt Creek, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_1571.JPG">
+            <img src="img/DSC_1571.JPG" alt="river" width="600" height="400">
+          </a>
+          <div class="desc">Hallet Cove Nat. Park, SA</div>
+        </div>
+      </div>
+      <div class="responsive" data-aos="zoom-in-up">
+        <div class="gallery">
+          <a target="_blank" href="img/DSC_2237.JPG">
+            <img src="img/DSC_2237.JPG" alt="kangaroo" width="600" height="400">
+          </a>
+          <div class="desc">Onkaparinga Nat. Park, SA</div>
         </div>
       </div>
       <div class="responsive" data-aos="zoom-in-up">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
+            <img src="img/DSC_2396.JPG" alt="path accross lagoon" width="600" height="400">
           </a>
-          <div class="desc">image caption goes here</div>
+          <div class="desc">Coorong, SA</div>
         </div>
       </div>
       <div class="responsive" data-aos="zoom-in-up">
         <div class="gallery">
           <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
+            <img src="img/DSC_1509.JPG" alt="path and clouds" width="600" height="400">
           </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
-        </div>
-      </div>
-      <div class="responsive" data-aos="zoom-in-up">
-        <div class="gallery">
-          <a target="_blank" href="img/DSC_2312.JPG">
-            <img src="img/DSC_2312.JPG" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <div class="desc">image caption goes here</div>
+          <div class="desc">Perry's Bend, SA</div>
         </div>
       </div>
     </div>
