--- a/about.html
+++ b/about.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Title and favicon-->
     <title>About - Nikolai Patrick</title>
+    <link rel="icon" type="image/x-icon" href="#">
+
+    <!--Meta SEO tags-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="I'm Nikolai Patrick. I'm interested in electronics engineering, computer sciences, photogrpahy and more. More about me here." />
+    <meta name="keywords" content="Photography, Electronics, Programming, Coding, Nikolai, Patrick, Nikolai Patrick" />
+    <meta name="author" content="Nikolai Patrick" />
+    <link rel="canonical" href="https://nikolaipatrick.com/about.html">
+
+    <!--Open Graph Data-->
+    <meta property="og:title" content="Nikolai Patrick - About" />
+    <meta property="og:url" content="https://nikolaipatrick.com/about.html" />
+    <meta property="og:image" content="https://nikolaipatrick.com/img/DSC_2330.JPG" />
+    <meta property="og:description" content="I'm Nikolai Patrick. I'm interested in electronics engineering, computer sciences, photogrpahy and more. This the website where I can share my work." />
+    <meta property="og:locale" content="en_AU" />
+    <meta property="og:type" content="website" />
+
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
