--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/master.css">
       <link rel="stylesheet" href="css/index.css" />
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Nikolai Patrick</title>
+    <title>Home - Nikolai Patrick</title>
     <script src="scripts/master.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div id="title_block">
-      <p><span id="title">Home - Nikolai Patrick</span></p>
+      <p><span id="title">Nikolai Patrick</span></p>
       <span id="titlePadding"></span>
       <p><span id="subtitle">Electronics Engineering <span class="subtitleSpace"></span> Programming <span class="subtitleSpace"></span> Photography</span><br/><span id="bodytext"</span></p>
     </div>
