--- a/photography.html
+++ b/photography.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About - Nikolai Patrick</title>
+
+    <!--Title and favicon-->
+    <title>Photography - Nikolai Patrick</title>
+    <link rel="icon" type="image/x-icon" href="#">
+
+    <!--Meta SEO tags-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A small collection of some of my photos. Taken on Nikon D750. See more on Instagram: @npatrick_photos" />
+    <meta name="keywords" content="Photography, Electronics, Programming, Coding, Nikolai, Patrick, Nikolai Patrick" />
+    <meta name="author" content="Nikolai Patrick" />
+    <link rel="canonical" href="https://nikolaipatrick.com/photography.html">
+
+    <!--Open Graph Data-->
+    <meta property="og:title" content="Nikolai Patrick - Photography" />
+    <meta property="og:url" content="https://nikolaipatrick.com/photography.html" />
+    <meta property="og:image" content="https://nikolaipatrick.com/img/DSC_2330.JPG" />
+    <meta property="og:description" content="A small collection of some of my photos. Taken on Nikon D750. See more on Instagram: @npatrick_photos" />
+    <meta property="og:locale" content="en_AU" />
+    <meta property="og:type" content="website" />
+
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/photography.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
