--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About - Nikolai Patrick</title>
+
+    <!--Title and favicon-->
+    <title>Projects - Nikolai Patrick</title>
+    <link rel="icon" type="image/x-icon" href="#">
+
+    <!--Meta SEO tags-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A small collection of some of my projects. See more on Instagram: @npatrick_photos" />
+    <meta name="keywords" content="Photography, Electronics, Programming, Coding, Nikolai, Patrick, Nikolai Patrick" />
+    <meta name="author" content="Nikolai Patrick" />
+    <link rel="canonical" href="https://nikolaipatrick.com/projects.html">
+
+    <!--Open Graph Data-->
+    <meta property="og:title" content="Nikolai Patrick - Projects" />
+    <meta property="og:url" content="https://nikolaipatrick.com/projects.html" />
+    <meta property="og:image" content="https://nikolaipatrick.com/img/DSC_2330.JPG" />
+    <meta property="og:description" content="A small collection of some of my projects. See more on Instagram: @npatrick_photos" />
+    <meta property="og:locale" content="en_AU" />
+    <meta property="og:type" content="website" />
+
+    <!--Stylesheets-->
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!--Scripts-->
     <script type="text/javascript" src="scripts/master.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -16,8 +37,8 @@
           window.scrollTo(0, 0);
         }
       });
-
     </script>
+
   </head>
   <body onload="onLoadFunctions()">
     <div class="dropdown">
@@ -37,38 +58,33 @@
       </div>
       <div id="projectsPanel">
         <div class="projectContainer" data-aos="zoom-in-up">
-          <p class="projectTitle">Project Title</p>
-          <p class="projectDate">15/04/2022</p>
+          <p class="projectTitle">Smart Weather Station</p>
+          <p class="projectDate">15/01/2021 - not finsished</p>
           <p class="projectDesc">
-            This is where the project description will go.
-
-            This is where the project description will go.
-
-            This is where the project description will go.
+            A self-made weather station involving 3D printed parts,
+            custom PCB design, Arduino programming, and Raspberry Pi.
+            An anenometer, wind direction sensor, UV sensor, temp/humidity
+            sensor and other components make up the station.
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
         <div class="projectContainer" data-aos="zoom-in-up">
-          <p class="projectTitle">Project Title</p>
-          <p class="projectDate">15/04/2022</p>
+          <p class="projectTitle">Nikolaipatrick.com / Artichokenetwork.com</p>
+          <p class="projectDate">18/04/2022</p>
           <p class="projectDesc">
-            This is where the project description will go.
-
-            This is where the project description will go.
-
-            This is where the project description will go.
+            The website you are looking at right now. Coded and built from
+            scratch using simple HTML, CSS, and JavaScript. Hosted on an Apache
+            2 webserver with Ubuntu.
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
         <div class="projectContainer" data-aos="zoom-in-up">
-          <p class="projectTitle">Project Title</p>
-          <p class="projectDate">15/04/2022</p>
+          <p class="projectTitle">Portable Arduino cube scrambler</p>
+          <p class="projectDate">15/04/2022 - not finished</p>
           <p class="projectDesc">
-            This is where the project description will go.
-
-            This is where the project description will go.
-
-            This is where the project description will go.
+            An Arduino powered device that generates an "official" Rubik's
+             cube random-scramble algorithm with a custom PCB. For fair and
+            consistent cube solves.
           </p>
           <img class="projectImg" src="img/DSC_2312.JPG" width="30%" />
         </div>
