--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About - Nikolai Patrick</title>
+    <!--Title and favicon-->
+    <title>Home - Nikolai Patrick</title>
+    <link rel="icon" type="image/x-icon" href="#">
+
+    <!--Meta SEO tags-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact page" />
+    <meta name="keywords" content="Photography, Electronics, Programming, Coding, Nikolai, Patrick, Nikolai Patrick" />
+    <meta name="author" content="Nikolai Patrick" />
+    <link rel="canonical" href="https://nikolaipatrick.com/contact.html">
+
+    <!--Open Graph Data-->
+    <meta property="og:title" content="Nikolai Patrick - Contact" />
+    <meta property="og:url" content="https://nikolaipatrick.com/contact.html" />
+    <meta property="og:image" content="https://nikolaipatrick.com/img/DSC_2330.JPG" />
+    <meta property="og:description" content="Contact page" />
+    <meta property="og:locale" content="en_AU" />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
