link website repo

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
           <span class="footerPadding"></span>
           <br />
           Designed by a human / Created by a human
-          <a href="https://github.com" class="bodyGithubLink" ><br />View this website on GitHub</a>
+          <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="bodyGithubLink" ><br />View this website on GitHub</a>
         </p>
     </div>
     <div class="footer" >
