--- a/photography.html
+++ b/photography.html
@@ -184,57 +184,9 @@
       </div>
     </div>
       <hr />
-      <p class="subFooter">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com" class="bodyGithubLink" ><br />View this website on GitHub</a></p>
+      <p class="subFooter">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="bodyGithubLink" ><br />View this website on GitHub</a></p>
     <div class="clearfix"></div>
       </div>
-      <!--
-      <div class="photoContainer" >
-        <div class="row" >
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell" src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell" src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell" src="img/DSC_2312.JPG"  />
-          </div>
-        </div>
-        <div class="row" >
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-        </div>
-        <div class="row" 3>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-        </div>
-        <div class="row">
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-          <div class="column" data-aos="zoom-in">
-          <image class="photoCell"  src="img/DSC_2312.JPG"  />
-          </div>
-        </div>
-      </div>
-      -->
 
     <div class="footer" >
       <div class="socials" >
