--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <a href="https://stackexchange.com/users/10142602/hotglue"><img src="img/stack.svg" width="31" height="31" /></a>
       </div>
-      <p class="footerText">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com/Smartich0ke/personal-website" class="githubLink" >View on GitHub</a></p>
+      <p class="footerText">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="githubLink" >View on GitHub</a></p>
     </div>
   </body>
 </html>
