add missing meta tags

--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="I'm Nikolai Patrick I'm interested in electronics engineering, computer sciences, photogrpahy and more. This is my personal website where I can share my work." />
-    <link rel="stylesheet" href="css/master.css">
-      <link rel="stylesheet" href="css/index.css" />
-      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Home - Nikolai Patrick</title>
-    <script src="scripts/master.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-    window.onbeforeunload = function () {
-      window.scrollTo(0, 0);
-    }
-    </script>
+
+        <!--Title and favicon-->
+        <title>Home - Nikolai Patrick</title>
+        <link rel="icon" type="image/x-icon" href="#">
+
+        <!--Meta SEO tags-->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="title" content="Nikolai Patrick:  Developer - Photographer" />
+        <meta name="description" content="I'm Nikolai Patrick. I'm interested in electronics engineering, computer sciences, photogrpahy and more. More about me here." />
+        <meta name="keywords" content="Photography, Electronics, Programming, Coding, Nikolai, Patrick, Nikolai Patrick" />
+        <meta name="author" content="Nikolai Patrick" />
+        <link rel="canonical" href="https://nikolaipatrick.com">
+
+        <!--Open Graph Data-->
+        <meta property="og:title" content="Nikolai Patrick - Photography" />
+        <meta property="og:url" content="https://nikolaipatrick.com" />
+        <meta property="og:image" content="https://nikolaipatrick.com/img/DSC_2330.JPG" />
+        <meta property="og:description" content="I'm Nikolai Patrick. I'm interested in electronics engineering, computer sciences, photogrpahy and more. More about me here." />
+        <meta property="og:locale" content="en_AU" />
+        <meta property="og:type" content="website" />
+
+        <!--Stylesheets-->
+        <link rel="stylesheet" href="css/master.css">
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+        <!--Scripts-->
+        <script src="scripts/master.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          window.onbeforeunload = function () {
+            window.scrollTo(0, 0);
+          }
+        </script>
   </head>
   <body onload="onLoadFunctions()">
     <div class="dropdown">
