--- a/photography.html
+++ b/photography.html
@@ -183,6 +183,14 @@
         </div>
       </div>
     </div>
+    <!-- Dynamic image viewing modal -->
+    <button id="myBtn">Open Modal</button>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div> 
       <hr />
       <p class="subFooter">Last Updated: <span class="lastUpdated"></span> <span class="footerPadding"></span> <a href="https://github.com/Smartich0ke/nikolaipatrick.com" class="bodyGithubLink" ><br />View this website on GitHub</a></p>
     <div class="clearfix"></div>
